--- a/style.css
+++ b/style.css
@@ -446,9 +446,9 @@ form .btn2{
        
     }
     .design .circle{
-        top: 20%;
-        right: 20%;
         width: 30%;
+        left: 82%;
+        margin-top:-75%;
     }
     .about-col-1{
         flex-basis: 82%;
@@ -473,15 +473,16 @@ form .btn2{
     .navlist{
         gap: 1rem;
     }
-    .left-container .icons{
-        margin-left: -25px;
-    }
     .left-container .content {
-        margin-top: 500px;
-        margin-left: 25px
+        margin-top: 200px;
+        margin-left: 20px;
+        margin-bottom: 10px;
+    }
+    .left-container .detail{
+        margin: 4px;
     }
     .left-container .corona{
-        margin-bottom: 10px;
+        margin-bottom: 4px;
 }   
 #msg{
     color: green;
